# python_devops_template

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml
tests/: test_example.py
